tests/build_scripts/snapshots/r#mod__build_scripts__embedded_assets__build_static_assets_templates.snap
---
source: tests/build_scripts/embedded_assets.rs
expression: template_content
snapshot_kind: text
---
/// Returns a IndexMap of templates in dependency order (parents before children)
#[must_use]
pub fn get_embedded_templates() -> indexmap::IndexMap<String, &'static str> {
    let mut templates = indexmap::IndexMap::new();
    // Base template with no parent
    templates.insert("index.html".to_string(), include_str!("[TEST_ROOT]/assets/views/index.html"));

    templates
}
